fix(dimmer): page dimmer in firefox results in misaligned modals

--- a/src/definitions/modules/dimmer.less
+++ b/src/definitions/modules/dimmer.less
@@ -151,6 +151,9 @@
     transform-style: @transformStyle;
     perspective: @perspective;
     transform-origin: center center;
+    &.modals {
+      -moz-perspective: none;
+    }
   }
 }
 
